# FCNX-Ensembling

./: ._FCN2Network.py  ._Untitled.ipynb  ._\  ._activations.py  ._json_handler.py  ._net_train_progress_bar.py  ._neural_menagerie_fcn2.py  ._nm_fcn2.py  ._nm_fcn3.py  ._simplenet.py  ._ssh_sesh.exp  ._utils.py  .gitignore  Covariance.py  Eos_Solvers.ipynb  Experiment.py  FCN2Network.py  FCN3.py  FCN3Network.py  GPKit.py  GP_Emp_Eig_Comparison.ipynb  LangVsVanillaGD.ipynb  Linear FCN3 Test.ipynb  LinearFCN3Test.ipynb  Manifest.toml  Project.toml  README.md  \  d3_scaling_results.jld2  datamanager.py  eigenvalue_solutions.py  eigenvalue_solutions_no_p.py  ensemble_fcn3_analysis.ipynb  ensemble_manager.py  eos_solvers.py  fcn2_eigenvalue_solver.py  fcn3_config.yaml  fcn3_test.py  json_handler.py  langevin_1d_simulation.ipynb  (+14 more)
.ipynb_checkpoints/: Empirical_Kernel_Estimation-checkpoint.ipynb  Eos Solvers-checkpoint.ipynb  FCN3-checkpoint.py  FCN3Network-checkpoint.py  GP_Emp_Eig_Comparison-checkpoint.ipynb  Linear FCN3 Test-checkpoint.ipynb  Untitled-checkpoint.ipynb  ensemble_manager-checkpoint.py  logger-checkpoint.py  neural_menagerie_fcn2-checkpoint.py  neural_menagerie_fcn3-checkpoint.py  standard_hyperparams-checkpoint.py  standard_hyperparams_fcn2-checkpoint.py
3layerexps/: Analyzing Spectrum Cubic Erf.ipynb  Eig_Calc_GP_Ensemble.nb  FCN3_custom_exp.yaml  GP_Ensemble_Analysis.ipynb  GP_offdata_canonical.yaml  ensembling_fcn3.py  ensembling_fcn3_erf.py  ensembling_fcn3_erf_cubic.py  erfeigen.ipynb  gp_ondata_empirical_kernels.py  gpu_availability.ipynb  (+4 more)
scripts/: ._]  (+15 more)
(+639 files in other folders)
